# ex7

./: .cproject  .project  Board.cpp  Board.h  CMakeLists.txt  Client_Settings.txt  Computer.cpp  GameSession.cpp  GameSession.h  Hello world.cpp  Human.cpp  Human.h  Logic.cpp  Logic.h  Move.cpp  Move.h  Player.cpp  Player.h  Point.cpp  Point.h  README.md  StdLogic.cpp  StdLogic.h  StdVisual.cpp  StdVisual.h  Visual.cpp  Visual.h  main.cpp  makefile
Client/: Board.cpp  Computer.cpp  Computer.h  GameSession.h  Human.cpp  Human.h  Logic.h  Move.cpp  Player.cpp  Player.h  RemoteConnection.cpp  RemoteConnection.h  RemoteGame.cpp  RemoteGame.h  RemoteGameRoom.cpp  RemoteGameRoom.h  RemotePlayer.cpp  RemotePlayer.h  StdGame.cpp  StdGame.h  StdLogic.cpp  StdLogic.h  Visual.h  main.cpp
SeqServer/: Server.cpp  Server.h  main.cpp
Server/: EndCommand.h  GameCommand.h  GameManager.cpp  GameManager.h  JoinCommand.cpp  JoinCommand.h  ListCommand.h  MenuCommand.h  MenuManager.cpp  MenuManager.h  Message.cpp  Message.h  NoMoveCommand.h  PlayCommand.h  Server.cpp  Server.h  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  serverClients.cpp  serverClients.h
test/: gtest_main.cpp  test_Board.cpp  test_Computer.cpp  test_Human.cpp  test_Server&RC.cpp  test_StdLogic.cpp
